--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "dependencies": {
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
+    "debug": ">=2.6.9",
     "express": "~4.13.4",
     "jade": "~1.11.0",
-    "morgan": "~1.7.0",
+    "morgan": ">=1.9.1",
     "serve-favicon": "~2.3.0",
     "bootstrap": "~3.3.7",
-    "jquery": "~3.1.0",
+    "jquery": ">=3.4.0",
     "passport": "~0.3.2",
     "passport-local": "~1.0.0",
     "express-session": "~1.14.1",
